@@ -227,7 +227,7 @@
 /* USB Controller */
 
 #ifndef CONFIG_USBDEV_SELFPOWERED
-#  define SELFPOWERED USB_CONFIG_ATT_SELFPOWER
+#  define SELFPOWERED USB_CONFIG_ATTR_SELFPOWER
 #else
 #  define SELFPOWERED (0)
 #endif
